src/test/ui/impl-trait/impl-fn-predefined-lifetimes.rs
#![feature(impl_trait_in_fn_trait_return)]
use std::fmt::Debug;

fn a<'a>() -> impl Fn(&'a u8) -> (impl Debug + '_) {
    //~^ ERROR hidden type for `impl Debug` captures lifetime that does not appear in bounds
    |x| x
}

fn _b<'a>() -> impl Fn(&'a u8) -> (impl Debug + 'a) {
    a()
}

fn main() {}
